201809151
Define and store rtl-sdr gain
Fix rtl-sdr frequency setting bug
Fix factory reset bug
Enable stream set-up and selection from Menu 3

201809051
Enable code changes for Stretch to be carried across to Jessie

201807291
Introduce Stream to Video appliance with "Stream Valid" signal
Major Improvements to touchscreen stream display

201807151
Add BATC Streamer Display Function
Resize H264 testcards for 7 inch display
Provide warning when Portsdown TX not available after audio usage
Correct FEC when switching from Lime to other output
Do not start the framebuffer copy for 7 inch display

201807091
LeanDVB Performance Improvements
Bugfix BATC Streamer label
Bugfix LeanDVB Preset storage
Prep for LimeSDR USB

201807041
New receive menu to allow independent selection of DATV receive parameters
MPEG-2 DATV receive capability after purchase and installation of key
Programmable ADF4351 output during receive for upconverters
Direct transmit frequency entry from frequency selection menu
New "clear" key on keyboard to clear entry line
10-character locator used as basis for locator change
Old BATC Streamer removed from output menu.

201805151
Added new menu for Composite Video Output
More test cards and all video snaps available from video output
Sound pass-through for Comp Video out is routed to USB Audio
RTL-FM audio is routed to USB Audio if present (else RPi audio)
SnapView modified to access all video snaps
Added Locator range and bearing calculator
Menu modifications in preparation for future LimeSDR Mini support

201804251
Adds comprehensive RTL_FM voice receiver (see Menu 2)
Corrects Testrig for Stretch build
Corrects SigGen Express Cal above 2000 MHz
Rejects zero-length callsign
More visibility of DATV Express start-up
Reduces occurences of 90-sec shutdown wait in Stretch
Improves utils compile scripts

201804060
Repairs the linkage between frequency and band in the Console Menu
Element 14 7 inch Display improvements:
Does not erroneously load TonTec driver